--- a/src/app/Components/BackOffice/drivers/drivers.component.scss
+++ b/src/app/Components/BackOffice/drivers/drivers.component.scss
@@ -203,3 +203,11 @@ button {
   font-size: 1.1rem;
   color: #475569;
 }
+.profile-photo {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid #e2e8f0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
