--- a/src/app/Shared/login/login.component.html
+++ b/src/app/Shared/login/login.component.html
@@ -20,7 +20,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
+      margin: 0 !important;
       background: #f5f3f3;
       color: #fff;
       overflow: hidden;
