--- a/src/app/Components/BackOffice/vehicle/vehicle-map/vehicle-map.component.html
+++ b/src/app/Components/BackOffice/vehicle/vehicle-map/vehicle-map.component.html
@@ -1,3 +1,9 @@
 <div class="map-wrapper">
-  <div #mapContainer id="map" style="width:100%; height:500px;"></div>
+  <div #mapContainer id="map" style="width: 100%; height: 500px;"></div>
+</div>
+
+<div class="text-center mt-3">
+  <button (click)="reachNextCheckpoint()" class="btn btn-success">
+    Reach Next Checkpoint
+  </button>
 </div>
